--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav id="anchors" class="navbar navbar-expand-lg navbar-light bg-light">
         <a href="#/" id="home-href">HOME</a>
         <a href="#/authors" id="authors-href">AUTHORS</a>
-        <a href="#/films" id="films-href">FILMS</a>
+        <a href="#/films" id="films-href">GENRE</a>
         <a href="#/map" id="map-href">MAP</a>
         <a href="#/about" id="about-href">ABOUT</a>
     </nav>
